@@ -88,15 +88,18 @@ int LLVMFuzzerInitialize(int *argc, char ***argv)
 
 int LLVMFuzzerTestOneInput(const uint8_t *data, size_t size)
 {
+	jas_stream_t *stream;
+	jas_image_t *image;
+
 	if (size == 0)
 		/* avoid the assertion failure */
 		data = NULL;
 
-	jas_stream_t *stream = jas_stream_memopen((char *)data, size);
+	stream = jas_stream_memopen((char *)data, size);
 	if (stream == NULL)
 		abort();
 
-	jas_image_t *image = jas_image_decode(stream, -1, NULL);
+	image = jas_image_decode(stream, -1, NULL);
 	jas_stream_close(stream);
 
 	if (image != NULL)
