@@ -15,7 +15,7 @@
 #define JAS_INCLUDE_JP2_CODEC 1
 #define JAS_INCLUDE_JPC_CODEC 1
 /* #define JAS_INCLUDE_JPG_CODEC 1 */
-/* #define JAS_INCLUDE_PGX_CODEC 1 */
+#define JAS_INCLUDE_PGX_CODEC 1
 
 
 /* The preprocessor symbol JAS_WIN_MSVC_BUILD should not be defined
